Fix filename overlap issue

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,10 @@ td:nth-child(3) {
   position: absolute;
   font-size: 10px;
   margin-top: 10px;
+  width: 500px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 #timeCodeDisplay {
   position: absolute;
